fix about page flickering

--- a/www/less/main/pages/about.less
+++ b/www/less/main/pages/about.less
@@ -21,45 +21,7 @@
 			opacity: 1;
 		}
 	}
-	.header:not(:hover):not(.hover) {
-		background: transparent;
-		border-color: transparent;
-		.header-logo {
-			border: 0;
-			.logo {
-				background: url(../img/logo-white.svg);
-				width: 40px;
-				height: 37px;
-				display: block;
-				img {
-					display: none;
-				}
-			}
-		}
-		.header-content {
-			.dropdown {
-				.dropdown-toggle {
-					.anim;
-					color: @white;
-				}
-				.caret {
-					.anim;
-					background-image: url(../img/dropdown-caret-white.svg);
-				}
-			}
-			.search-wrapper {
-				.anim;
-				opacity: 0;
-			}
-		}
-		.header-userarea {
-			.anim;
-			border: 0;
-			a {
-				color: @white;
-			}
-		}
-	}
+	
 	.content {
 		// margin-top: -@header-height;
 		.hero {
